edit font-size for portfolio parts to be correctly visible on laptop screen (15.4)

--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -329,14 +329,28 @@ a {
 
 				.first {
 					margin-left: 500px;
-					width: 458px;
+					width: 100%;
 					transition: 1.1s;
 				}
 
 				.last {
 					margin-left: -500px;
-					width: 458px;
+					width: 100%;
 					transition: 1.5s;
+				}
+				
+				@media screen and (max-width: 1600px) {
+					h2 {
+						font-size: 1.3rem;
+					}
+					
+					h5 {
+						font-size: 0.9rem;
+					}
+					
+					p {
+						font-size: 0.8rem;
+					}
 				}
 
 				.suite {
